# json-tabulate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run-tests.yml
src/json_tabulate/: __init__.py  cli.py  core.py  main.py
tests/: test_cli.py  test_core.py  test_main.py
