[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json-tabulate"
version = "0.1.0"
description = "Python library and CLI program that translates arbitrarily-nested JSON into CSV"
readme = "README.md"
requires-python = ">=3.9"
authors = []
dependencies = [
    "typer>=0.9.0",
    "typing-extensions>=4.15.0"
]

[dependency-groups]
dev = [
    "ptpython>=3.0.31",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
json-tabulate = "json_tabulate.cli:app"

[project.urls]
Homepage = "https://github.com/eecavanna/json-tabulate"
Repository = "https://github.com/eecavanna/json-tabulate"

[tool.hatch.build.targets.wheel]
packages = ["src/json_tabulate"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
